gc/recognizer/gc-parser.output
State 30 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 62 conflicts: 2 shift/reduce
State 63 conflicts: 2 shift/reduce
State 64 conflicts: 3 shift/reduce
State 66 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 5 shift/reduce
State 78 conflicts: 3 shift/reduce
State 79 conflicts: 3 shift/reduce


Grammar

    0 $accept: prog "end of file"

    1 prog: commands

    2 commands: command
    3         | commands command

    4 command: "assume" assertion ";"
    5        | "assert" assertion ";"
    6        | "havoc" location ";"
    7        | command "[]" command ";"
    8        | "(" command ")"

    9 assertion: comparison
   10          | "!" assertion
   11          | assertion "||" assertion
   12          | assertion "&&" assertion
   13          | assertion "==>" assertion
   14          | "forall" identifiers "," assertion
   15          | "exists" identifiers "," assertion
   16          | "true"
   17          | "false"
   18          | "(" assertion ")"

   19 comparison: expression "=" expression
   20           | expression "!=" expression
   21           | expression "<=" expression
   22           | expression ">=" expression
   23           | expression "<" expression
   24           | expression ">" expression

   25 location: "identifier"

   26 expression: location
   27           | location "[" expression "]"
   28           | constant
   29           | "-" expression
   30           | expression "+" expression
   31           | expression "-" expression
   32           | expression "*" expression
   33           | expression "/" expression
   34           | expression "%" expression
   35           | "(" expression ")"

   36 constant: "number"

   37 identifiers: "identifier"
   38            | identifiers "identifier"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "+" (258) 30
    "-" (259) 29 31
    "*" (260) 32
    "/" (261) 33
    "%" (262) 34
    "(" (263) 8 18 35
    ")" (264) 8 18 35
    "=" (265) 19
    "!=" (266) 20
    "<=" (267) 21
    ">=" (268) 22
    "<" (269) 23
    ">" (270) 24
    "!" (271) 10
    "||" (272) 11
    "&&" (273) 12
    ";" (274) 4 5 6 7
    "," (275) 14 15
    "[" (276) 27
    "]" (277) 27
    "==>" (278) 13
    "forall" (279) 14
    "exists" (280) 15
    "true" (281) 16
    "false" (282) 17
    "identifier" <std::string> (283) 25 37 38
    "number" <int> (284) 36
    "assume" (285) 4
    "assert" (286) 5
    "havoc" (287) 6
    "[]" (288) 7


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    prog <gc::ast::Program*> (35)
        on left: 1
        on right: 0
    commands <std::vector<gc::ast::Command*>> (36)
        on left: 2 3
        on right: 1 3
    command <gc::ast::Command*> (37)
        on left: 4 5 6 7 8
        on right: 2 3 7 8
    assertion <gc::ast::Assertion*> (38)
        on left: 9 10 11 12 13 14 15 16 17 18
        on right: 4 5 10 11 12 13 14 15 18
    comparison <gc::ast::Comparison*> (39)
        on left: 19 20 21 22 23 24
        on right: 9
    location <gc::ast::Location*> (40)
        on left: 25
        on right: 6 26 27
    expression <gc::ast::Expression*> (41)
        on left: 26 27 28 29 30 31 32 33 34 35
        on right: 19 20 21 22 23 24 27 29 30 31 32 33 34 35
    constant <gc::ast::Constant*> (42)
        on left: 36
        on right: 28
    identifiers <std::vector<std::string>> (43)
        on left: 37 38
        on right: 14 15 38


State 0

    0 $accept: . prog "end of file"

    "("       shift, and go to state 1
    "assume"  shift, and go to state 2
    "assert"  shift, and go to state 3
    "havoc"   shift, and go to state 4

    prog      go to state 5
    commands  go to state 6
    command   go to state 7


State 1

    8 command: "(" . command ")"

    "("       shift, and go to state 1
    "assume"  shift, and go to state 2
    "assert"  shift, and go to state 3
    "havoc"   shift, and go to state 4

    command  go to state 8


State 2

    4 command: "assume" . assertion ";"

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 18
    comparison  go to state 19
    location    go to state 20
    expression  go to state 21
    constant    go to state 22


State 3

    5 command: "assert" . assertion ";"

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 23
    comparison  go to state 19
    location    go to state 20
    expression  go to state 21
    constant    go to state 22


State 4

    6 command: "havoc" . location ";"

    "identifier"  shift, and go to state 16

    location  go to state 24


State 5

    0 $accept: prog . "end of file"

    "end of file"  shift, and go to state 25


State 6

    1 prog: commands .
    3 commands: commands . command

    "("       shift, and go to state 1
    "assume"  shift, and go to state 2
    "assert"  shift, and go to state 3
    "havoc"   shift, and go to state 4

    $default  reduce using rule 1 (prog)

    command  go to state 26


State 7

    2 commands: command .
    7 command: command . "[]" command ";"

    "[]"  shift, and go to state 27

    $default  reduce using rule 2 (commands)


State 8

    7 command: command . "[]" command ";"
    8        | "(" command . ")"

    ")"   shift, and go to state 28
    "[]"  shift, and go to state 27


State 9

   29 expression: "-" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 30
    constant    go to state 22


State 10

   18 assertion: "(" . assertion ")"
   35 expression: "(" . expression ")"

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 31
    comparison  go to state 19
    location    go to state 20
    expression  go to state 32
    constant    go to state 22


State 11

   10 assertion: "!" . assertion

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 33
    comparison  go to state 19
    location    go to state 20
    expression  go to state 21
    constant    go to state 22


State 12

   14 assertion: "forall" . identifiers "," assertion

    "identifier"  shift, and go to state 34

    identifiers  go to state 35


State 13

   15 assertion: "exists" . identifiers "," assertion

    "identifier"  shift, and go to state 34

    identifiers  go to state 36


State 14

   16 assertion: "true" .

    $default  reduce using rule 16 (assertion)


State 15

   17 assertion: "false" .

    $default  reduce using rule 17 (assertion)


State 16

   25 location: "identifier" .

    $default  reduce using rule 25 (location)


State 17

   36 constant: "number" .

    $default  reduce using rule 36 (constant)


State 18

    4 command: "assume" assertion . ";"
   11 assertion: assertion . "||" assertion
   12          | assertion . "&&" assertion
   13          | assertion . "==>" assertion

    "||"   shift, and go to state 37
    "&&"   shift, and go to state 38
    ";"    shift, and go to state 39
    "==>"  shift, and go to state 40


State 19

    9 assertion: comparison .

    $default  reduce using rule 9 (assertion)


State 20

   26 expression: location .
   27           | location . "[" expression "]"

    "["  shift, and go to state 41

    $default  reduce using rule 26 (expression)


State 21

   19 comparison: expression . "=" expression
   20           | expression . "!=" expression
   21           | expression . "<=" expression
   22           | expression . ">=" expression
   23           | expression . "<" expression
   24           | expression . ">" expression
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "+"   shift, and go to state 42
    "-"   shift, and go to state 43
    "*"   shift, and go to state 44
    "/"   shift, and go to state 45
    "%"   shift, and go to state 46
    "="   shift, and go to state 47
    "!="  shift, and go to state 48
    "<="  shift, and go to state 49
    ">="  shift, and go to state 50
    "<"   shift, and go to state 51
    ">"   shift, and go to state 52


State 22

   28 expression: constant .

    $default  reduce using rule 28 (expression)


State 23

    5 command: "assert" assertion . ";"
   11 assertion: assertion . "||" assertion
   12          | assertion . "&&" assertion
   13          | assertion . "==>" assertion

    "||"   shift, and go to state 37
    "&&"   shift, and go to state 38
    ";"    shift, and go to state 53
    "==>"  shift, and go to state 40


State 24

    6 command: "havoc" location . ";"

    ";"  shift, and go to state 54


State 25

    0 $accept: prog "end of file" .

    $default  accept


State 26

    3 commands: commands command .
    7 command: command . "[]" command ";"

    "[]"  shift, and go to state 27

    $default  reduce using rule 3 (commands)


State 27

    7 command: command "[]" . command ";"

    "("       shift, and go to state 1
    "assume"  shift, and go to state 2
    "assert"  shift, and go to state 3
    "havoc"   shift, and go to state 4

    command  go to state 55


State 28

    8 command: "(" command ")" .

    $default  reduce using rule 8 (command)


State 29

   35 expression: "(" . expression ")"

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 56
    constant    go to state 22


State 30

   29 expression: "-" expression .
   30           | expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    "%"       [reduce using rule 29 (expression)]
    $default  reduce using rule 29 (expression)


State 31

   11 assertion: assertion . "||" assertion
   12          | assertion . "&&" assertion
   13          | assertion . "==>" assertion
   18          | "(" assertion . ")"

    ")"    shift, and go to state 57
    "||"   shift, and go to state 37
    "&&"   shift, and go to state 38
    "==>"  shift, and go to state 40


State 32

   19 comparison: expression . "=" expression
   20           | expression . "!=" expression
   21           | expression . "<=" expression
   22           | expression . ">=" expression
   23           | expression . "<" expression
   24           | expression . ">" expression
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression
   35           | "(" expression . ")"

    "+"   shift, and go to state 42
    "-"   shift, and go to state 43
    "*"   shift, and go to state 44
    "/"   shift, and go to state 45
    "%"   shift, and go to state 46
    ")"   shift, and go to state 58
    "="   shift, and go to state 47
    "!="  shift, and go to state 48
    "<="  shift, and go to state 49
    ">="  shift, and go to state 50
    "<"   shift, and go to state 51
    ">"   shift, and go to state 52


State 33

   10 assertion: "!" assertion .
   11          | assertion . "||" assertion
   12          | assertion . "&&" assertion
   13          | assertion . "==>" assertion

    "||"   shift, and go to state 37
    "&&"   shift, and go to state 38
    "==>"  shift, and go to state 40

    "==>"     [reduce using rule 10 (assertion)]
    $default  reduce using rule 10 (assertion)


State 34

   37 identifiers: "identifier" .

    $default  reduce using rule 37 (identifiers)


State 35

   14 assertion: "forall" identifiers . "," assertion
   38 identifiers: identifiers . "identifier"

    ","           shift, and go to state 59
    "identifier"  shift, and go to state 60


State 36

   15 assertion: "exists" identifiers . "," assertion
   38 identifiers: identifiers . "identifier"

    ","           shift, and go to state 61
    "identifier"  shift, and go to state 60


State 37

   11 assertion: assertion "||" . assertion

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 62
    comparison  go to state 19
    location    go to state 20
    expression  go to state 21
    constant    go to state 22


State 38

   12 assertion: assertion "&&" . assertion

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 63
    comparison  go to state 19
    location    go to state 20
    expression  go to state 21
    constant    go to state 22


State 39

    4 command: "assume" assertion ";" .

    $default  reduce using rule 4 (command)


State 40

   13 assertion: assertion "==>" . assertion

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 64
    comparison  go to state 19
    location    go to state 20
    expression  go to state 21
    constant    go to state 22


State 41

   27 expression: location "[" . expression "]"

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 65
    constant    go to state 22


State 42

   30 expression: expression "+" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 66
    constant    go to state 22


State 43

   31 expression: expression "-" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 67
    constant    go to state 22


State 44

   32 expression: expression "*" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 68
    constant    go to state 22


State 45

   33 expression: expression "/" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 69
    constant    go to state 22


State 46

   34 expression: expression "%" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 70
    constant    go to state 22


State 47

   19 comparison: expression "=" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 71
    constant    go to state 22


State 48

   20 comparison: expression "!=" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 72
    constant    go to state 22


State 49

   21 comparison: expression "<=" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 73
    constant    go to state 22


State 50

   22 comparison: expression ">=" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 74
    constant    go to state 22


State 51

   23 comparison: expression "<" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 75
    constant    go to state 22


State 52

   24 comparison: expression ">" . expression

    "-"           shift, and go to state 9
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    location    go to state 20
    expression  go to state 76
    constant    go to state 22


State 53

    5 command: "assert" assertion ";" .

    $default  reduce using rule 5 (command)


State 54

    6 command: "havoc" location ";" .

    $default  reduce using rule 6 (command)


State 55

    7 command: command . "[]" command ";"
    7        | command "[]" command . ";"

    ";"   shift, and go to state 77
    "[]"  shift, and go to state 27


State 56

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression
   35           | "(" expression . ")"

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46
    ")"  shift, and go to state 58


State 57

   18 assertion: "(" assertion ")" .

    $default  reduce using rule 18 (assertion)


State 58

   35 expression: "(" expression ")" .

    $default  reduce using rule 35 (expression)


State 59

   14 assertion: "forall" identifiers "," . assertion

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 78
    comparison  go to state 19
    location    go to state 20
    expression  go to state 21
    constant    go to state 22


State 60

   38 identifiers: identifiers "identifier" .

    $default  reduce using rule 38 (identifiers)


State 61

   15 assertion: "exists" identifiers "," . assertion

    "-"           shift, and go to state 9
    "("           shift, and go to state 10
    "!"           shift, and go to state 11
    "forall"      shift, and go to state 12
    "exists"      shift, and go to state 13
    "true"        shift, and go to state 14
    "false"       shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    assertion   go to state 79
    comparison  go to state 19
    location    go to state 20
    expression  go to state 21
    constant    go to state 22


State 62

   11 assertion: assertion . "||" assertion
   11          | assertion "||" assertion .
   12          | assertion . "&&" assertion
   13          | assertion . "==>" assertion

    "||"   shift, and go to state 37
    "==>"  shift, and go to state 40

    "||"      [reduce using rule 11 (assertion)]
    "==>"     [reduce using rule 11 (assertion)]
    $default  reduce using rule 11 (assertion)


State 63

   11 assertion: assertion . "||" assertion
   12          | assertion . "&&" assertion
   12          | assertion "&&" assertion .
   13          | assertion . "==>" assertion

    "||"   shift, and go to state 37
    "&&"   shift, and go to state 38
    "==>"  shift, and go to state 40

    "&&"      [reduce using rule 12 (assertion)]
    "==>"     [reduce using rule 12 (assertion)]
    $default  reduce using rule 12 (assertion)


State 64

   11 assertion: assertion . "||" assertion
   12          | assertion . "&&" assertion
   13          | assertion . "==>" assertion
   13          | assertion "==>" assertion .

    "||"   shift, and go to state 37
    "&&"   shift, and go to state 38
    "==>"  shift, and go to state 40

    "||"      [reduce using rule 13 (assertion)]
    "&&"      [reduce using rule 13 (assertion)]
    "==>"     [reduce using rule 13 (assertion)]
    $default  reduce using rule 13 (assertion)


State 65

   27 expression: location "[" expression . "]"
   30           | expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46
    "]"  shift, and go to state 80


State 66

   30 expression: expression . "+" expression
   30           | expression "+" expression .
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    "%"       [reduce using rule 30 (expression)]
    $default  reduce using rule 30 (expression)


State 67

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   31           | expression "-" expression .
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    "%"       [reduce using rule 31 (expression)]
    $default  reduce using rule 31 (expression)


State 68

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   32           | expression "*" expression .
   33           | expression . "/" expression
   34           | expression . "%" expression

    "%"  shift, and go to state 46

    "%"       [reduce using rule 32 (expression)]
    $default  reduce using rule 32 (expression)


State 69

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   33           | expression "/" expression .
   34           | expression . "%" expression

    "%"  shift, and go to state 46

    "%"       [reduce using rule 33 (expression)]
    $default  reduce using rule 33 (expression)


State 70

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression
   34           | expression "%" expression .

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    "+"       [reduce using rule 34 (expression)]
    "-"       [reduce using rule 34 (expression)]
    "*"       [reduce using rule 34 (expression)]
    "/"       [reduce using rule 34 (expression)]
    "%"       [reduce using rule 34 (expression)]
    $default  reduce using rule 34 (expression)


State 71

   19 comparison: expression "=" expression .
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 19 (comparison)


State 72

   20 comparison: expression "!=" expression .
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 20 (comparison)


State 73

   21 comparison: expression "<=" expression .
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 21 (comparison)


State 74

   22 comparison: expression ">=" expression .
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 22 (comparison)


State 75

   23 comparison: expression "<" expression .
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 23 (comparison)


State 76

   24 comparison: expression ">" expression .
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | expression . "%" expression

    "+"  shift, and go to state 42
    "-"  shift, and go to state 43
    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 24 (comparison)


State 77

    7 command: command "[]" command ";" .

    $default  reduce using rule 7 (command)


State 78

   11 assertion: assertion . "||" assertion
   12          | assertion . "&&" assertion
   13          | assertion . "==>" assertion
   14          | "forall" identifiers "," assertion .

    "||"   shift, and go to state 37
    "&&"   shift, and go to state 38
    "==>"  shift, and go to state 40

    "||"      [reduce using rule 14 (assertion)]
    "&&"      [reduce using rule 14 (assertion)]
    "==>"     [reduce using rule 14 (assertion)]
    $default  reduce using rule 14 (assertion)


State 79

   11 assertion: assertion . "||" assertion
   12          | assertion . "&&" assertion
   13          | assertion . "==>" assertion
   15          | "exists" identifiers "," assertion .

    "||"   shift, and go to state 37
    "&&"   shift, and go to state 38
    "==>"  shift, and go to state 40

    "||"      [reduce using rule 15 (assertion)]
    "&&"      [reduce using rule 15 (assertion)]
    "==>"     [reduce using rule 15 (assertion)]
    $default  reduce using rule 15 (assertion)


State 80

   27 expression: location "[" expression "]" .

    $default  reduce using rule 27 (expression)
